--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/campfirein/byterover-mcp"
   },
   "keywords": [
     "vibe coding",
