--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/campfirein/byterover-mcp"
+    "url": "git+https://github.com/campfirein/byterover-mcp.git"
   },
   "keywords": [
     "vibe coding",
